--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,31 +11,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="#">Meetup Geolocator</a>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li><%= link_to "Search" %></li>
-            <li><%= link_to "Contact Us" %></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= nav_bar :fixed => :top, :brand => "Meetups Geolocator" do %>
+      <% menu_group do %>
+          <%= menu_item "About Us", "#" %>
+          <%= menu_item "Contact", "#" %>
+      <% end %>
+  <% end %>
 
   <div class="container">
     <div class="row">
       <div class="span9"><%= yield %></div>
       <div class="span3">
-        <h2>About Us</h2>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <%= nav_bar  do %>
+          <%= form_tag events_path, method: :get do %>
+            <%= text_field_tag :query, params[:query], class: "navbar-search pull-right", placeholder: "Search"  %>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
