--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 <body>
   <%= nav_bar :fixed => :top, :brand => "Meetups Geolocator" do %>
       <% menu_group do %>
+          <%= menu_divider %>
           <%= menu_item "About Us", "#" %>
+          <%= menu_divider %>
           <%= menu_item "Contact", "#" %>
       <% end %>
   <% end %>
@@ -21,12 +23,26 @@
   <div class="container">
     <div class="row">
       <div class="span9"><%= yield %></div>
-      <div class="span3">
-        <%= nav_bar  do %>
+
+      <div class="span3"> 
           <%= form_tag events_path, method: :get do %>
             <%= text_field_tag :query, params[:query], class: "navbar-search pull-right", placeholder: "Search"  %>
           <% end %>
-        <% end %>
+
+
+        <h2>Tools:</h2>
+          
+
+          <button class="btn btn-primary">X</button>  
+          <button class="btn btn-primary">Y</button>  
+          <button class="btn btn-primary">Z</button> 
+
+        <ul> 
+          <li>Meet Up 1</li>
+          <li>Meet Up 2</li>
+          <li>Meet Up 3</li>
+        </ul>
+
       </div>
     </div>
   </div>
