--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,24 +23,21 @@
   <div class="container">
     <div class="row">
       <div class="span9"><%= yield %></div>
-
-      <div class="span3"> 
+      <div class="span3 text-center"> 
           <%= form_tag events_path, method: :get do %>
             <%= text_field_tag :query, params[:query], class: "navbar-search pull-right", placeholder: "Search"  %>
           <% end %>
 
-        <h2>Tools:</h2>
-          
+        <h2>Tools</h2>          
           <button class="btn btn-primary">X</button>  
           <button class="btn btn-primary">Y</button>  
           <button class="btn btn-primary">Z</button> 
-
         <ul> 
+
           <li>Meet Up 1</li>
           <li>Meet Up 2</li>
           <li>Meet Up 3</li>
         </ul>
-
       </div>
     </div>
   </div>
