--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,4 +7,16 @@
  *= require_tree .
 */
 
-body { padding-top: 60px; }
+html, body {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+div.olMap {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
