--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,40 +6,12 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag 'http://maps.google.com/maps/api/js?v=3&sensor=false' %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <%= nav_bar :fixed => :top, :brand => "Meetups Geolocator" do %>
-      <% menu_group do %>
-          <%= menu_divider %>
-          <%= menu_item "About Us", "#" %>
-          <%= menu_divider %>
-          <%= menu_item "Contact", "#" %>
-      <% end %>
-  <% end %>
-
-  <div class="container">
-    <div class="row">
-      <div class="span9"><%= yield %></div>
-      <div class="span3 text-center"> 
-          <%= form_tag events_path, method: :get do %>
-            <%= text_field_tag :query, params[:query], class: "navbar-search pull-right", placeholder: "Search"  %>
-          <% end %>
-
-        <h2>Tools</h2>          
-          <button class="btn btn-primary">X</button>  
-          <button class="btn btn-primary">Y</button>  
-          <button class="btn btn-primary">Z</button> 
-        <ul> 
-
-          <li>Meet Up 1</li>
-          <li>Meet Up 2</li>
-          <li>Meet Up 3</li>
-        </ul>
-      </div>
-    </div>
-  </div>
+  <%= yield %>
 </body>
 </html>
