--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,2 +1,7 @@
-<%= render 'shared/findlocation_control'%>
-<%= render 'shared/queryresults_control'%>
+<div id="map-tools-perspective">
+  <div id="map-tools">
+    <div id="map-tools-inner">
+        <%= render 'shared/queryresults_control'%>
+    </div>
+  </div>
+</div>
