--- a/app/views/shared/_queryresults_control.html.erb
+++ b/app/views/shared/_queryresults_control.html.erb
@@ -7,8 +7,8 @@
     </div>
     <div id="query-results" class="accordion-body collapse in">
       <div class="accordion-inner">
-        <span data-ng-show="results.length==0">No results! :-(</span>
-        <span data-ng-show="results.length>0">{{results.length}} found! :-)</span>
+        <p data-ng-show="results.length==0" style="width: 100%;text-align:center;">No results! Wait... :-(</p>
+        <p data-ng-show="results.length>0" style="width: 100%;text-align:center;">{{results.length}} found! :-)</p>
         <div class="table table-striped" data-ng-show="results.length>0" data-add-slim-scroll>
           <table>
             <tbody>
