implementation of location finder; fixing bugs

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -127,3 +127,7 @@ $width: 400px;
   border: 2px dotted #F08080;
   background: rgba(211, 211, 211, 0.24);
 }
+
+.location-load {
+  background: url(/assets/location-load.png) center top no-repeat;
+}
