--- a/app/views/shared/_queryresults_control.html.erb
+++ b/app/views/shared/_queryresults_control.html.erb
@@ -9,7 +9,8 @@
       <div class="accordion-inner">
         <p data-ng-show="results.length==0" style="width: 100%;text-align:center;">No results! Wait... :-(</p>
         <p data-ng-show="results.length>0" style="width: 100%;text-align:center;">{{results.length}} found! :-).
-          <br><br><span style="font-weight:bold;text-decoration:underline;">Tip:</span> Press Shift and select events!
+          <br><br><span style="font-weight:bold;text-decoration:underline;">Tip:</span> Press Shift, click into the map and drag the mouse!
+          The picked events will be selected immediately!
         </p>
         <div class="table table-striped" data-ng-show="results.length>0" data-add-slim-scroll>
           <table>
