Rails Rumble bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,6 @@
 <body>
   <%= javascript_tag 'var MEETUP_LOGO_PATH = "' + image_path('meetup_logo_small.png') + '";' %>
   <%= yield %>
+  <script src="http://s0.railsrumble.com/banner.js" type="text/javascript"></script>
 </body>
 </html>
